test to set up cors